Add Task image_urls to api schemas
